<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="match_parent"
    tools:context=".GameDetailsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        tools:context=".GameDetailsFragment">

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_title_textview"
                android:text="TextView"
                android:textSize="40sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                />
            <ImageView
                android:layout_marginLeft="50dp"
                android:layout_marginVertical="5dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/cover_imageview"/>
            <LinearLayout
                android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/platformt"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Platform: "
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:id="@+id/platform_textview"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/releaset"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Release date: "
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/release_date_textview"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/esrbt"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="ESRB rating: "
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/esrb_rating_textview"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/developert"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Developer: "
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/developer_textview"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/publishert"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Publisher: "
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    android:id="@+id/publisher_textview"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/genret"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Genre: "
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/genre_textview"/>
            </LinearLayout>



            <TextView
                android:layout_marginVertical="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_gravity="left"
                android:textSize="20sp"
                android:id="@+id/description_textview"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="140dp"
                    android:text="ADD" />

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="REMOVE" />

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_list"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Review"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/review_edittext"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rating"
                />

            <Button
                android:id="@+id/send_impressions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Impressions" />

            <RatingBar
                android:id="@+id/rating_bar_impression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>