...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/lin3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/game_list"
            >
            <EditText
                android:id="@+id/search_query_edittext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
...
